<resources>
    <string name="app_name">ArchTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_description">logo Desc</string>
    <string name="login_title">سامانه قرائت آب و برق و تأسیسات قشم</string>
    <string name="username_hint">نام کاربری</string>
    <string name="password_hint">رمز عبور</string>
    <string name="remember_password">مرا به خاطر بسپار</string>
    <string name="login_button">ورود</string>
    <string name="forgot_password">فراموشی رمز عبور</string>
    <string name="signup">ثبت نام</string>
</resources>